force-app/main/default/objects/Opportunity/fields/SBQQ__CreateContractedPrices__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__CreateContractedPrices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this checkbox to create Contracted Prices without creating a Contract.</description>
    <inlineHelpText>Sélectionnez cette case pour créer des prix contractés sans créer de contrat.</inlineHelpText>
    <label>Create Contracted Prices</label>
    <type>Checkbox</type>
</CustomField>