force-app/main/default/objects/Opportunity/fields/SBQQ__PrimaryQuote__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__PrimaryQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Points to primary quote on this opportunity.</description>
    <inlineHelpText>Salesforce CPQ l&apos;utilise pour pointer vers le devis principal de cette opportunité.</inlineHelpText>
    <label>Primary Quote</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>SBQQ__Quote__c.SBQQ__Opportunity2__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>PrimaryOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>