force-app/main/default/objects/Opportunity/fields/SBQQ__Renewal__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this opportunity is a renewal opportunity.</description>
    <inlineHelpText>Indique que cette opportunité est un renouvellement.</inlineHelpText>
    <label>Renewal</label>
    <type>Checkbox</type>
</CustomField>