force-app/main/default/objects/Opportunity/recordTypes/AOPublicDSP.recordType-meta.xml
<RecordType>
    <fullName>AOPublicDSP</fullName>
    <active>true</active>
    <businessProcess>Opportunité Entreprise%2FAO Privé%2FPartenaire</businessProcess>
    <description>AO Public DSP</description>
    <label>AO Public DSP</label>
</RecordType>