force-app/main/default/objects/Opportunity/recordTypes/AOPublicReservataire.recordType-meta.xml
<RecordType>
    <fullName>AOPublicReservataire</fullName>
    <active>true</active>
    <businessProcess>Opportunité Entreprise%2FAO Privé%2FPartenaire</businessProcess>
    <label>AO Public Réservataire</label>
</RecordType>