force-app/main/default/objects/Opportunity/recordTypes/AOPublicReservation.recordType-meta.xml
<RecordType>
    <fullName>AOPublicReservation</fullName>
    <active>true</active>
    <businessProcess>Opportunité AO Public</businessProcess>
    <label>AO Public Réservation</label>
</RecordType>