force-app/main/default/objects/Opportunity/recordTypes/Entreprise.recordType-meta.xml
<RecordType>
    <fullName>Entreprise</fullName>
    <active>true</active>
    <businessProcess>Opportunité Entreprise%2FAO Privé%2FPartenaire</businessProcess>
    <label>Entreprise</label>
</RecordType>