force-app/main/default/objects/Opportunity/recordTypes/Partenaire.recordType-meta.xml
<RecordType>
    <fullName>Partenaire</fullName>
    <active>true</active>
    <businessProcess>Opportunité Entreprise%2FAO Privé%2FPartenaire</businessProcess>
    <label>Partenaire</label>
</RecordType>