force-app/main/default/objects/Opportunity/validationRules/VR_Opportunity_AbandonLostReason.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Opportunity_AbandonLostReason</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
     NOT($Permission.LPCR_ByPass_VR ),
     AND(
         ISPICKVAL( StageName,&quot;Abandon&quot;),
         ISNULL( LPCR_MotifAbandon__c )
         )
     )</errorConditionFormula>
    <errorDisplayField>LPCR_MotifAbandon__c</errorDisplayField>
    <errorMessage>Veuillez  précisez la raison de l&apos;abandon de l&apos;Appel d&apos;Offre</errorMessage>
</ValidationRule>