force-app/main/default/objects/Opportunity/validationRules/VR_Opportunity_CompetitorLostReasons.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Opportunity_CompetitorLostReasons</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( 
      NOT($User.LPCR_BypassValidationRules__c ),
      ISPICKVAL(LPCR_RaisonPerteOpportunite__c,&quot;Concurrence&quot;),
      ISBLANK(Concurrent__c)
         
     )</errorConditionFormula>
    <errorDisplayField>Concurrent__c</errorDisplayField>
    <errorMessage>Veuillez renseigner le concurrent à l&#39;origine de la perte de l&#39;Opportunité</errorMessage>
</ValidationRule>