force-app/main/default/objects/Opportunity/validationRules/VR_Opportunity_Probability_00.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Opportunity_Probability_00</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
     NOT ( $User.LPCR_BypassValidationRules__c ),
     OR  ( RecordType.DeveloperName = &#39;Entreprise&#39;,
           RecordType.DeveloperName = &#39;Famille&#39; )
     ,
OR  (
    AND(ISPICKVAL(StageName,&quot;Perdue&quot; ),Probability &lt;&gt; 0)
    )
)</errorConditionFormula>
    <errorDisplayField>Probability</errorDisplayField>
    <errorMessage>Veuillez renseigner une valeur de probabilité égale à 0%</errorMessage>
</ValidationRule>