force-app/main/default/objects/Opportunity/validationRules/VR_Opportunity_Probability_00_20.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Opportunity_Probability_00_20</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
     NOT ( $Permission.LPCR_ByPass_VR ),
     OR  ( RecordType.DeveloperName = &apos;Entreprise&apos;,
           RecordType.DeveloperName = &apos;Famille&apos; )
     ,
OR  (
    AND(ISPICKVAL(StageName,&quot;Prospection/Découverte&quot; ),Probability &lt; 0.01),
    AND(ISPICKVAL(StageName,&quot;Prospection/Découverte&quot; ), Probability &gt; 0.20)
    )
)</errorConditionFormula>
    <errorDisplayField>Probability</errorDisplayField>
    <errorMessage>Veuillez renseigner une valeur de probabilité comprise entre 1 et 20%</errorMessage>
</ValidationRule>