force-app/main/default/objects/Opportunity/validationRules/VR_Opportunity_Probability_10.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Opportunity_Probability_10</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
     NOT ( $Permission.LPCR_ByPass_VR ),
     OR  ( RecordType.DeveloperName = &#39;Entreprise&#39;,
           RecordType.DeveloperName = &#39;Famille&#39; )
     ,

    ISPICKVAL(StageName,&#39;Signée&#39; ),
Probability &lt;&gt; 1.0
    
)</errorConditionFormula>
    <errorDisplayField>Probability</errorDisplayField>
    <errorMessage>Veuillez renseigner une valeur de probabilité égale à 100%</errorMessage>
</ValidationRule>