force-app/main/default/objects/Opportunity/validationRules/VR_Opportunity_Probability_20_500.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Opportunity_Probability_20_500</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
     NOT ( $Permission.LPCR_ByPass_VR ),
     OR  ( RecordType.DeveloperName = &apos;Entreprise&apos;,
           RecordType.DeveloperName = &apos;Famille&apos; )
     ,
OR  (
    AND(ISPICKVAL(StageName,&quot;Proposition Commerciale&quot; ),Probability &lt; 0.2),
    AND(ISPICKVAL(StageName,&quot;Proposition Commerciale&quot; ), Probability &gt; 0.50)
    )
)</errorConditionFormula>
    <errorDisplayField>Probability</errorDisplayField>
    <errorMessage>Veuillez renseigner une valeur de probabilité comprise entre 20 et 50%</errorMessage>
</ValidationRule>