force-app/main/default/objects/Opportunity/validationRules/VR_Opportunity_Probability_50_800.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Opportunity_Probability_50_800</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
     NOT ( $User.LPCR_BypassValidationRules__c ),
     OR  ( RecordType.DeveloperName = &#39;Entreprise&#39;,
           RecordType.DeveloperName = &#39;Famille&#39; )
     ,
OR  (
    AND(ISPICKVAL(StageName,&quot;Négociation/ Contractualisation&quot; ),Probability &lt; 0.5),
    AND(ISPICKVAL(StageName,&quot;Négociation/ Contractualisation&quot; ), Probability &gt; 0.8)
    )
)</errorConditionFormula>
    <errorDisplayField>Probability</errorDisplayField>
    <errorMessage>Veuillez renseigner une valeur de probabilité comprise entre 50 et 80%</errorMessage>
</ValidationRule>